fix: :art: nav fix and dark mode cleanup
consistent dark nav bar and white text accross mac osx system themes - the dark nav makes the logo text legible

--- a/css/output.css
+++ b/css/output.css
@@ -570,6 +570,10 @@ video {
   top: 0px;
 }
 
+.top-40 {
+  top: 10rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -625,6 +629,10 @@ video {
 
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mt-\[138px\] {
+  margin-top: 138px;
 }
 
 .box-border {
